# data-engineering-zoomcamp

./: .gitignore  GEMINI.md  README.md  duckdb.db  pyproject.toml  setup_secrets.sh
.gemini/: settings.json
01-docker/: readme.md
01-docker-terraform/: readme.md
01-docker-terraform/homework/: README.md
01-docker-terraform/workshop/pipeline/: Dockerfile
01-docker/homework/: README.md
01-docker/homework/homework-pipeline/: ingest_data.py
01-docker/workshop/pipeline/: pipeline.py  taxi-data-ingestion.ipynb
02-workflow-orchestration/: README.md
02-workflow-orchestration/homework/: README.md  flow-homework.yaml  loop.yaml
02-workflow-orchestration/workflows/: README.md
03-data-warehouse/: README.md
03-data-warehouse/homework/: README.md  load_yellow_taxi_data.py
04-analytics-engineering/: README.md  pyproject.toml
04-analytics-engineering/homework/: README.md
04-analytics-engineering/taxi_rides_ny/: README.md  dbt_project.yml  fhv_ingest.py
04-analytics-engineering/taxi_rides_ny/macros/: get_vendor_names.sql
05-data-platforms/: README.md
05-data-platforms/homework/: README.md
05-data-platforms/pipeline/: pipeline.yml
06-batch-processing/: README.md
06-batch-processing/codes/: 01_test_spark.py  02_pyspark.ipynb  03_taxi_schema.ipynb  04_spark_sql.ipynb  05_groupby_join.ipynb  06_rdd.ipynb
06-batch-processing/homework/: README.md  homework.ipynb
07-streaming/homework/: README.md
workshop-01-dlt/: dlt_Pipeline_Overview.ipynb  open_library_analysis.py  open_library_pipeline.py
workshop-01-dlt/homework/: README.md
(+84 files in other folders)
