[project]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.4",
    "altair>=6.0.0",
    "ibis-framework[duckdb]>=12.0.0",
    "jupyterlab>=4.5.4",
    "marimo>=0.19.9",
    "dbt-core>=1.11.6",
    "graphviz>=0.21",
    "dlt[duckdb,workspace]>=1.22.1",
    "ipykernel>=7.2.0",
]
